# fintech-asset-recommendation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/EDA/: customers.ipynb
